objects/wkitsm__RequestMenuQuestionChoice__c.object
<CustomObject>
    <fields>
        <fullName>wkitsm__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether or not the question choice is active. This will determine whether or not the choice is rendered on forms.</description>
        <inlineHelpText>Whether or not the question choice is active. This will determine whether or not the choice is rendered on forms.</inlineHelpText>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkitsm__Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__RequestMenuQuestion__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Request Menu Question</label>
        <referenceTo>wkitsm__RequestMenuQuestion__c</referenceTo>
        <relationshipLabel>RequestMenuQuestionChoices</relationshipLabel>
        <relationshipName>RequestMenuQuestionChoices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Request Menu Question Choice</label>
    <nameField>
        <label>Question Choice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Menu Question Choices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>